--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ python-multipart = "^0.0.5"
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.21.0"
 flake8 = "^6.0.0"
+pytest = "^7.2.1"
+httpx = "^0.23.3"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
