--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pre-commit = "^2.21.0"
 flake8 = "^6.0.0"
 pytest = "^7.2.1"
 httpx = "^0.23.3"
+SQLAlchemy-Utils = "^0.39.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
