--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "family_project_assignment"
+name = "family_budget"
 version = "0.0.1"
-description = "Home assignment"
+description = "Family budget"
 authors = [
 "Jakub Padukiewicz"
 ]
