--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Environment variables used to create a connection string
-PGHOST="127.0.0.1"
+PGHOST="postgres"
 PGPORT=5432
 PGUSER="assignment"
 PGDATABASE="assignment"
